Fix clipping in search widget on mobile (agaaaaain)

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -202,8 +202,8 @@ figure
     display: block !important
 
     .ds-dropdown-menu
-      max-width: 100vw
-      min-width: fit-content
+      max-width: 100vw !important
+      min-width: fit-content !important
 
 +from($navbar-breakpoint)
 	// On mobile (and by default), the search input is displayed at the top of the menu,
